caso_practico_3/db.deploy.yaml
apiVersion: apps/v1
kind: Deployment
metadata:
  name: db
  labels:
    app: db
spec:
  replicas: 1
  selector:
    matchLabels:
      app: db
  template:
    metadata:
      generateName: db
      labels:
        app: db
        version: v0.1
    spec:
      restartPolicy: Always
      containers:
        - name: db
          image: mysql
          imagePullPolicy: Always
          volumeMounts:
          - name: sql-volume
            mountPath: "/docker-entrypoint-initdb.d/"
          ports:
            - name: db-mysql
              containerPort: 3306
      volumes:
      - configMap:
          name: db-sql
        name: sql-volume
      - name: secret-volume
        secret:
          secretName: db-credentials
